<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fragment_profile_login_btn_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="@dimen/dp_general_large"
        android:src="@drawable/ic_return" />

    <LinearLayout
        android:layout_width="@dimen/dp_fragment_profile_login_form_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_profile_login_text_view_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_general_huge"
            android:text="@string/fragment_profile_not_login_title"
            android:textSize="@dimen/sp_general_large"
            android:textStyle="bold"
            android:transitionName="@string/fragment_profile_transition_name_welcome_text" />

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/fragment_profile_login_edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_general_huge"
            android:hint="@string/fragment_profile_login_hint_username"
            android:inputType="text"
            app:bootstrapSize="lg"
            app:roundedCorners="true" />

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/fragment_profile_login_edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_general_huge"
            android:hint="@string/fragment_profile_login_hint_password"
            android:inputType="textPassword"
            app:bootstrapSize="lg"
            app:roundedCorners="true" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/fragment_profile_login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/fragment_profile_not_login_login"
            android:textStyle="bold"
            android:transitionName="@string/fragment_profile_transition_name_login_btn"
            app:bootstrapBrand="success"
            app:bootstrapSize="lg"
            app:roundedCorners="true" />

    </LinearLayout>


</RelativeLayout>