<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/dp_general_large">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_add_user_game_input_duration_title"
        android:textAlignment="center"
        android:textSize="@dimen/sp_general_large"
        android:padding="@dimen/dp_general_large"
        android:textStyle="bold" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/fragment_add_user_game_input_duration_edit_text_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginBottom="@dimen/dp_general_large"
        android:hint="@string/fragment_add_user_game_input_duration_hint"/>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/fragment_add_user_game_input_duration_btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bootstrapBrand="success"
        app:bootstrapSize="lg"
        android:text="@string/fragment_add_user_game_input_duration_add"/>

</LinearLayout>